Add user registration form

--- a/src/CSS/dashboard.css
+++ b/src/CSS/dashboard.css
@@ -21,7 +21,7 @@
     border-radius: 25px;
     width: 70%;
     height: 97vh;
-    background-color: tomato;
+    background-color: royalblue;
 }
 .userIcon{
     height: 20vh;
