Add other 4 actors

--- a/src/CSS/menuitems.css
+++ b/src/CSS/menuitems.css
@@ -29,3 +29,9 @@
 .iconBox{
     margin-top: 20px;
 }
+.menu:hover>.icon{
+    background-color:mediumpurple;
+}
+.menu:hover{
+    background-color: dodgerblue;
+}
